--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
