--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react": "^18.3.1",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
